[package]
name = "rfkillr"
version = "0.1.3"
edition = "2021"
license = "MIT or Apache 2.0"
repository = "https://github.com/Taha-Firoz/rfkillr"
description = "A Rust library for interacting with the rfkill subsystem on Linux"
readme = "README.md"
keywords = ["rfkill", "linux", "system", "device", "control", "hardware", "bluetooth", "wifi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
anyhow = "1.0.44"
serde = "1.0.160"
tracing = "0.1.37"
zvariant = "3.12.0"

