[package]
name = "rfkillr"
version = "0.1.3"
edition = "2021"
license = "MIT or Apache 2.0"
repository = "https://github.com/Taha-Firoz/rfkillr"
description = "A Rust library for interacting with the rfkill subsystem on Linux"
readme = "README.md"
keywords = ["rfkill", "linux", "system", "device", "hardware"]

[dependencies]
nix = "0.26.2"
anyhow = "1.0.44"
tracing = "0.1.37"
# Add any dependencies that are only needed for the "serialization" feature
serde = { version = "1.0.160", optional = true }
zvariant = { version = "3.12.0", optional = true }

[features]
serialization = ["serde", "zvariant"]
# Add any other features here


